--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "dev-log",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,16 +8,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gdsc-dju/gds-styles": "^0.0.0",
+    "@gdsc-dju/gds-theme": "^0.0.0",
     "next": "12.3.1",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "18.11.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.25.0",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "babel-plugin-styled-components": "^2.0.7",
+    "eslint": "8.20.0",
     "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "next-compose-plugins": "^2.2.1",
+    "prettier": "^2.7.1",
     "typescript": "4.8.4"
   }
 }
